Migration a service part to JDK 17